--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f .env next dev",
+
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
+    "env-cmd": "^10.1.0",
     "jquery": "^3.7.1",
     "next": "14.2.2",
     "react": "^18",
