--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL = "http://192.168.101.13:5010"  
+NEXT_PUBLIC_API_URL = "http://api-website.sooritechnology.com.np"  
+# NEXT_PUBLIC_API_URL = "http://192.168.1.73:5010/"  
