--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "env-cmd -f .env next dev",
     "dev:local": "env-cmd -f .env.local next dev",
-
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,6 +20,7 @@
     "react-icons": "^5.1.0",
     "react-slick": "^0.30.2",
     "sass": "^1.75.0",
+    "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1"
   },
