--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "4.3.1",
     "env-cmd": "^10.1.0",
     "jquery": "^3.7.1",
@@ -25,6 +26,7 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
