--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "env-cmd -f .env next dev",
     "dev:local": "env-cmd -f .env.local next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint"
   },
   "dependencies": {
